更新前后端

--- a/智能产线综合应用实训/line/myproject/myline/templates/layout.html
+++ b/智能产线综合应用实训/line/myproject/myline/templates/layout.html
@@ -64,7 +64,7 @@ NAVBAR (remove topnav if you don't want changed nav background on scroll)
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			维护历史 </a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="/myline/maintainence/">设备维护历史</a>
+				<a class="dropdown-item" href="/myline/workinghistory/">设备历史</a>
 				<a class="dropdown-item" href="/myline/add_maintain/">新增维护工单</a>
 				
 
